// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> should have the right class names when error is passed 1`] = `
<div
  className="slds-form-element slds-has-error"
  style={Object {}}
>
  <label
    className="slds-form-element__label"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="slds-form-element__help"
  >
    Error text
  </div>
</div>
`;

exports[`<Input/> should have the right class names when have a custom class 1`] = `
<div
  className="slds-form-element my-custom-class-name"
  style={Object {}}
>
  <label
    className="slds-form-element__label"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when iconName is passed 1`] = `
<div
  className="slds-form-element"
  style={Object {}}
>
  <label
    className="slds-form-element__label"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-input__icon slds-icon-text-default slds-input__icon_left"
      style={Object {}}
    >
      <use
        xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
    <input
      className="slds-input"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when isBare 1`] = `
<div
  className="slds-form-element"
  style={Object {}}
>
  <label
    className="slds-form-element__label"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-input_bare"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when isCentered 1`] = `
<div
  className="slds-form-element"
  style={Object {}}
>
  <label
    className="slds-form-element__label"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-input_counter"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when labelClassName is passed 1`] = `
<div
  className="slds-form-element"
  style={Object {}}
>
  <label
    className="slds-form-element__label my-custom-label-class-name"
    htmlFor="input-1"
  />
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input"
      data-id="input-1"
      disabled={false}
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;
